--- a/index.html
+++ b/index.html
@@ -1576,7 +1576,7 @@
                 <div class="col-md-12">
                     <b class="font-Oswald-b" style="display:block;text-align:center;font-size:70px;color:#fff;">
                         WHEN?</b>
-                    <b class="font-roboto-r" style="display:block;text-align:center;font-size:50px;color:#fff49B;">3-Day Event, <br>15-17rd May 2020</b>
+                    <b class="font-roboto-r" style="display:block;text-align:center;font-size:50px;color:#fff49B;">3-Day Event, <br>12-14th Jun 2020</b>
                 </div>
                 <div class="col-md-12">
                     <b class="font-Oswald-b" style="display:block;text-align:center;font-size:70px;color:#fff;">
